[package]

name = "gitforge"
version = "0.1.42"
edition = "2021"
authors = ["John Kagunda rafaeljohb@gmail.com"]
description = "A template project for GitHub-related utilities."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "stream", "blocking", "rustls-tls"] }
serde_json = "1.0.140"
syntect = "5.2.0"
openssl = { version = "0.10", features = ["vendored"] }
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
regex = "1.11.1"
serde_yaml = "0.9.34"
colored = "3.0.0"

[build-dependencies]
regex = "1.11.1"
sha2 = "0.10.9"
chrono = { version = "0.4", features = ["serde"] }


